--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,3 +1,12 @@
+$theme-colors: (
+    "info": tomato,
+    "danger": teal
+);
+
+
+@import "~bootstrap/scss/bootstrap";
+
+
 html,
 body {
   padding: 0;
