--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -5,14 +5,12 @@ $theme-colors: (
 
 
 @import "~bootstrap/scss/bootstrap";
-
-
+@import url('https://fonts.googleapis.com/css2?family=Exo+2:wght@500&display=swap');
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'Exo 2', sans-serif;
 }
 
 a {
@@ -22,4 +20,37 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+
+
+.about{
+  margin-top: 5rem;
+  margin-bottom: 5rem;
+}
+
+
+.info{  
+  margin-top: 5rem;
+  margin-bottom: 5rem;
+
+  .description{
+    margin-top: 5rem;    
+
+    .nav{
+      .nav-item{
+        margin-right: 2rem;
+      }
+    }
+  }
+}
+
+
+.whyme{
+  margin-top: 5rem;
+  margin-bottom: 5rem;
+  .icon{
+    text-align: center;
+    margin-bottom: 3rem;
+  }
 }
