--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -23,6 +23,14 @@ a {
 }
 
 
+.heading-container{
+  margin-top: 3rem;
+  margin-bottom: 3rem;
+  text-align: center;
+  h2{
+    font-size: 2rem;
+  }
+}
 
 .about{
   margin-top: 5rem;
