--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -33,17 +33,17 @@ a {
 }
 
 .about{
-  margin-top: 5rem;
-  margin-bottom: 5rem;
+  margin-top: 10rem;
+  margin-bottom: 10rem;
 }
 
 
 .info{  
-  margin-top: 5rem;
-  margin-bottom: 5rem;
+  margin-top: 10rem;
+  margin-bottom: 10rem;
 
   .description{
-    margin-top: 5rem;    
+    margin-top: 4rem;    
 
     .nav{
       .nav-item{
@@ -51,14 +51,42 @@ a {
       }
     }
   }
+
+  .hireme{
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+  }
 }
 
 
 .whyme{
-  margin-top: 5rem;
-  margin-bottom: 5rem;
+  margin-top: 10rem;
+  margin-bottom: 10rem;
   .icon{
     text-align: center;
     margin-bottom: 3rem;
+  }
+}
+
+
+.service-container{
+  
+  margin-top: 10rem;
+  margin-bottom: 10rem;
+
+  .service-box{
+    margin-top: 3rem;
+    margin-bottom: 3rem;
+    h3{
+      text-align: center;
+      margin-top: 1rem;
+      margin-bottom: 1rem;
+    }
+    p{
+      text-align: justify;
+    }
+    .icon{
+      text-align: center;
+    }
   }
 }
