--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -6,6 +6,9 @@ $theme-colors: (
 
 @import "~bootstrap/scss/bootstrap";
 @import url('https://fonts.googleapis.com/css2?family=Exo+2:wght@500&display=swap');
+@import "./sidemenu.scss";
+
+
 html,
 body {
   padding: 0;
