--- a/styles/sidemenu.scss
+++ b/styles/sidemenu.scss
@@ -1,4 +1,15 @@
-.menu-sidebar{
-  width: 20rem;
-  padding: 5rem 1rem 5rem 5rem;
+.menu-sidebar-container{  
+  .close-icon{
+    margin: 10px;
+  }
+  .menu-sidebar{
+    width: 20rem;
+    padding: 2rem 2rem 2rem 2rem;
+  
+    .nav{
+      .nav-item{
+        margin-bottom: 1rem;
+      }
+    }
+  }
 }
